cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_json_specifications@valid-license-licensing-1.5.json.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-license-licensing-1.5.json
---
{
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "serialNumber": "urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79",
  "components": [
    {
      "type": "library",
      "publisher": "Acme Inc",
      "group": "com.acme",
      "name": "cryptographic-provider",
      "version": "2.2.0",
      "licenses": [
        {
          "license": {
            "bom-ref": "acme-license-1",
            "name": "Acme Commercial License",
            "licensing": {
              "altIds": [
                "acme",
                "acme-license"
              ],
              "licensor": {
                "organization": {
                  "name": "Acme Inc",
                  "contact": [
                    {
                      "name": "Acme Licensing Fulfillment",
                      "email": "licensing@example.com"
                    }
                  ]
                }
              },
              "licensee": {
                "organization": {
                  "name": "Example Co."
                }
              },
              "purchaser": {
                "individual": {
                  "name": "Samantha Wright",
                  "email": "samantha.wright@gmail.com",
                  "phone": "800-555-1212"
                }
              },
              "purchaseOrder": "PO-12345",
              "licenseTypes": [
                "appliance"
              ],
              "lastRenewal": "2022-04-13T20:20:39+00:00",
              "expiration": "2023-04-13T20:20:39+00:00"
            }
          }
        }
      ]
    }
  ]
}
