cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_json_specifications@valid-license-name-1.5.json.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-license-name-1.5.json
---
{
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "serialNumber": "urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79",
  "components": [
    {
      "type": "library",
      "publisher": "Acme Inc",
      "group": "com.acme",
      "name": "tomcat-catalina",
      "version": "9.0.14",
      "licenses": [
        {
          "license": {
            "bom-ref": "my-license",
            "name": "Apache License 2.0"
          }
        }
      ]
    }
  ]
}
