cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_json_specifications@valid-metadata-lifecycle-1.5.json.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
assertion_line: 55
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-metadata-lifecycle-1.5.json
---
{
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "serialNumber": "urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79",
  "metadata": {
    "lifecycles": [
      {
        "phase": "build"
      },
      {
        "phase": "post-build"
      },
      {
        "name": "platform-integration-testing",
        "description": "Integration testing specific to the runtime platform"
      }
    ]
  },
  "components": []
}
